Integration with SauceLabs for cross-browser testing, and first pass at beautification support to ease whitespace merge issues.

--- a/specs/mocha/mocha.css
+++ b/specs/mocha/mocha.css
@@ -147,6 +147,7 @@ body {
   -webkit-box-shadow: 0 1px 3px #eee;
   -moz-border-radius: 3px;
   -moz-box-shadow: 0 1px 3px #eee;
+  border-radius: 3px;
 }
 
 #mocha .test h2 {
@@ -187,21 +188,20 @@ body {
   display: none;
 }
 
+#mocha-report.pending .test.pass,
+#mocha-report.pending .test.fail {
+  display: none;
+}
+#mocha-report.pending .test.pass.pending {
+  display: block;
+}
+
 #mocha-error {
   color: #c00;
   font-size: 1.5em;
   font-weight: 100;
   letter-spacing: 1px;
 }
-
-#mocha-report.pending .test.pass
-#mocha-report.pending .test.fail{
-   display: none;
- }
-#mocha-report.pending .test.pass.pending {
-   display: block;
- }
-
 
 #mocha-stats {
   position: fixed;
